# omostation

./: .env.example  .gitattributes  .gitignore  .gitmessage  .gitmodules  .pre-commit-config-l4.yaml  .pre-commit-config.yaml  .pymarkdown  .shellcheckrc  .trigger-pr-ci  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BRIEF.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-20260619.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DOC_REFACTOR_SUMMARY.md  KEMS-review-2026-06-11.md  LAYER-INDEX.md  LICENSE  Makefile  PROJECT.md  README.md  SECURITY.md  SUPPORT.md  SYSTEM-INDEX.md  WIKI.md  convergence.yaml  debt-audit-report.md  docker-compose.yml  eCOS  fix_omo_tasks.py  fix_p15.py  governance-report.html  land-strategy.sh  migrate-phase7de.py  (+3 more)
projects/aetherforge/: .dockerignore  .gitignore  API.md  ARCHITECTURE-GATEWAY.md  ARCHITECTURE-SCHEDULING.md  ARCHITECTURE-v2.md  ARCHITECTURE.md  AUDIT.md  COMPARISON.md  CONTRIBUTING.md  Dockerfile  Makefile  OMO.md  README.md  RESEARCH.md  ROADMAP-L0.md  docker-compose.yml  mkdocs.yml  pyproject.toml
projects/aetherforge-swarm-ext/: pyproject.toml
projects/aetherforge/.github/: README.md
projects/aetherforge/docs/: index.md  quickstart.md
projects/aetherforge/examples/: basic_llm_call.py  compute_mesh.py  graph_workflow.py  group_chat.py  routing_and_costs.py
projects/aetherforge/tests/: benchmark.py  test_e2e.py  test_supplemental.py
projects/agora/: AGENTS.md  CLAUDE.md  INTERFACE.yaml  Makefile  README.md  pyproject.toml
projects/agora/docs/: god-module-split-plan.md
projects/agora/scripts/: com.agora.serve.plist
projects/agora/src/: agora-events.json  agora-routes.json  agora-services.json  agora.db  trace_log.jsonl
projects/agora/tests/: conftest.py  mcp_gateway_test.py  test_accounting.py  test_agent_registry.py  test_audit.py  test_audit_subscriber.py  test_bos_e2e.py  test_bos_e2e_real.py  test_cli.py  test_commands_repo.py  test_degrade.py  test_discovery.py  test_eidos_pipeline.py  test_eidos_pipeline_route.py  test_eidos_service.py  test_evaluator.py  test_event_bus.py  test_github_source_e2e.py  test_governance.py  test_identity.py  test_integration.py  test_lifecycle.py  test_llm_route_e2e.py  test_market.py  test_mcp_registry_e2e.py  test_mcp_registry_e2e_full.py  test_mcp_server.py  test_metrics.py  test_orchestrator.py  test_otel.py  test_pipeline.py  test_pipeline_eventbus_integration.py  test_pipeline_identity.py  test_protocols.py  test_proxy.py  test_proxy_dynamic.py  test_rate_limit.py  test_registry.py  test_repository.py  test_router.py  (+6 more)
projects/bus-foundation/: AGENTS.md  CHANGELOG.md  CLAUDE.md  GOVERNANCE.md  OWNERS.md  README.md  pyproject.toml
projects/bus-foundation/docs/: ADR-0002-phase-c-trigger-reality-DRAFT.md  ADR-0003-no-l0-promotion.md  ARCHITECTURE.md  GOVERNANCE.md
projects/bus-foundation/scripts/: check-bus-hard-conditions.sh  release-bus-foundation.sh  test-all-consumers.sh
projects/bus-foundation/tests/: test_asyncio_backend.py  test_croniter_backend.py  test_cross_repo_smoke.py  test_dlq.py  test_envelope.py  test_eventbus_backend.py  test_facade.py  test_messagebus_backend.py  test_pattern_match.py  test_persistent_bus_backend.py  test_persistent_bus_ratelimit.py  test_realtime_backend.py  test_realtime_unsubscribe.py  test_router_retry_ownership.py  test_sse_backend.py  test_ws_backend.py
projects/c2g/: LICENSE  README.md  pyproject.toml
projects/c2g/tests/: test_smoke.py
projects/cockpit/: AGENTS.md  CLAUDE.md  INTERFACE.yaml  Makefile  README.md  onboarding-context.xml  pyproject.toml  scratch_runtime_test.py
projects/cockpit/tests/: conftest.py  test_basic.py  test_cli.py
projects/cockpit/web/: CLAUDE.md  README.md  app.py  dashboard.html  package-lock.json  package.json  workspace_research.py
projects/compute-mesh/: ARCHITECTURE.md  pyproject.toml
projects/ecos/: .gitignore  AGENTS.md  CLAUDE.md  GENOME.md  INTERFACE.yaml  Makefile  README.md  STATE.yaml  pyproject.toml
projects/ecos/LADS/: cross_refs.jsonl
projects/ecos/scripts/: CLAUDE.md  MetaOS-bootstrap.sh  README.md  adapter-stubs.py  bos-registry-daemon.py  cards-value-attribution.py  catalog-daemon.py  check-bos-alignment.py  check-cards-state-consistency.py  check-claude-freshness.py  check-disk-usage.py  check-kairon-governance.py  check-vault-audit.py  daily_digest.py  domain-value-attribution.py  ecos-bootstrap.py  ecos-bootstrap.sh  ecos-brief.py  ecos-constraint-validator.py  ecos-daemon.py  ecos-deploy  ecos-entry-logger.py  ecos-entry-profiler.py  ecos-event-watcher.py  ecos-healer.py  ecos-health-check.py  ecos-init.sh  ecos-onboard.py  ecos-register.py  ecos-sla-tracker.py  ecos-weekly-digest.py  fix-debts.py  kairon-cost-attribution.py  knowledge_gap.py  research_push.py  runtime-mcp-server.py  ssb_integrity.py  task-status.py  validate.sh  vault-value-attribution.py  (+2 more)
projects/ecos/src/: content_integrity.py  ecos_common.py  ecos_timeout.py  realtime_guard.py  ssb_auth.py  ssb_client.py
projects/ecos/tests/: T7-crash-recovery-test.py  T8-committee-error-test.py  conftest.py  redteam-v3.py  test_bos_route_alignment.py  test_core.py  test_core_extended.py  test_core_unit.py  test_e2e_baseline.py  test_imports.py  test_kos_health_monitor.py  test_mof_agora_hook.py  test_output.py  test_phase9_push.py  test_redteam_v3.py  test_workflow_cli.py
projects/llm-gateway/: README.md  pyproject.toml
projects/model-driven/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
projects/model-driven/tests/: test_cli.py  test_derivation_engine.py  test_lifecycle.py  test_m2_lifecycle.py  test_m3_extended.py  test_management.py  test_mof_operations.py  test_pipeline.py  test_ssot.py  test_toolchain.py  test_trigger_m0.py  test_trigger_registry.py
projects/omo/: .gitignore  AGENTS.md  CLAUDE.md  INTERFACE.yaml  Makefile  OMO-DEBT-CONVERGENCE.md  README.md  pyproject.toml  split_script.py  tri-plane-contract.md
projects/omo-debt/: CHANGELOG.md  LICENSE  RELEASE_NOTES_v0.2.0.md  TUTORIAL.md  pyproject.toml
projects/omo-debt/examples/: debt1-p0.yaml  debts.yaml  example-minimal.yaml  (+2 more)
(+6586 files in other folders)
