[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherforge-swarm-ext"
version = "0.1.0"
description = "AetherForge Swarm Extensions — ILS, Perception, Planning, Legacy modules"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aetherforge-swarm",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_ext"]
