[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherforge"
version = "0.1.0"
description = "AetherForge — 算力网格 + LLM 网关 + 群体智能引擎融合栈"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "eCOS Team"},
]
keywords = ["compute", "mesh", "llm", "gateway", "swarm", "agent", "multi-agent"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

readme = "README.md"

dependencies = [
    "aetherforge-gateway",
    "aetherforge-swarm",
    "aetherforge-mesh",
    "fastmcp>=3.4",
]

[project.scripts]
aetherforge = "aetherforge.cli:main"
aetherforge-mcp = "aetherforge.mcp_server:main"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
aetherforge-gateway = { workspace = true }
aetherforge-swarm = { workspace = true }
aetherforge-mesh = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
minversion = "7.0"
addopts = "-v --tb=short -q"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "PLE", "RUF100"]
ignore = ["S101", "S603", "S607", "S108", "S110", "S314", "S608", "E402", "E501", "SIM115", "N813", "UP047"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/aetherforge"]
