[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bus-foundation"
version = "0.1.1"
description = "Unified bus interface for the eCOS stack (split from agora/bus in Phase B, R66). 0.1.1 = R76 backlog fixes (rate-limit cleanup, ADR-0003)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "omostation bus-foundation maintainers" }]
keywords = ["bus", "event", "pubsub", "ecos", "omostation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bus_foundation"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
