[project]
name = "c2g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "X-Plane Audit Agent", email = "agent@omostation.local" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
ecos = ["omo"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
omo = { path = "../omo" }

[project.scripts]
c2g = "c2g.cli:main"
