[project]
name = "c2g"
version = "0.1.0"
description = "C2G: Concept-to-Goal strategic engine with IOC + Ports & Adapters"
authors = [
    { name = "Xiamingxing", email = "xiamingxing@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
ecos = ["omo"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
omo = { path = "../omo" }

[project.scripts]
c2g = "c2g.cli:main"
c2g-mcp = "c2g.mcp_server:mcp.run"
