[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compute-mesh"
version = "0.1.0"
description = "eCOS 算力网格 — 算力发现/聚合/调度/Worker 管理"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "compute", "mesh", "scheduler", "agent"]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastmcp>=3.4",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
compute-mesh = "compute_mesh.api.cli:main"
compute-mesh-mcp = "compute_mesh.api.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_mesh"]
