[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecos"
version = "0.8.0"
description = "eCOS — 认知层：SSB 签名链、涌现度量、认知监控"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "fastmcp>=3.4.2",
]

[project.optional-dependencies]
dashboard = ["agora"]  # Dashboard/MOF BOS features require agora runtime

[project.scripts]
ecos-ssb = "ecos.core.ssb_client:main"
ecos-dashboard = "ecos.cli.dashboard:main"
ecos-scheduler = "ecos.cli.scheduler:main"
mof = "ecos.ssot.tools.mof:main"
mof-validate = "ecos.ssot.tools.mof-validate:main"
mof-audit = "ecos.ssot.tools.mof-audit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
