[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-gateway"
version = "1.0.0"
description = "LLM Provider 抽象层 — Ollama/OpenAI/Anthropic/Gemini/DeepSeek/HITL"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "provider", "gateway", "openai", "anthropic"]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastmcp>=3.4",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
llm-gateway = "llm_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_gateway"]
