[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-driven"
version = "0.1.0"
description = "Model-Driven Lifecycle Platform — 全生命周期模型驱动平台：MOF扩展 + 7阶段引擎 + 12工具链 + 管理面"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=3.4.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.8",
]

[project.scripts]
model-driven = "model_driven.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/model_driven"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-q", "--tb=short"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "PLE", "RUF100"]
ignore = ["S101", "S603", "S607", "S108", "S110", "S314", "S608", "E402", "E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
