[project]
name = "omo-debt"
version = "1.0.0"
description = "Pattern 09 v2.2: Lifecycle-aware technical debt scoring with Honesty + Legacy dimensions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "starlink-awaken", email = "starlink.awaken@example.com"}
]
keywords = ["technical-debt", "code-quality", "lifecycle", "pattern09", "omo", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Bug Tracking",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/starlink-awaken/omo-debt"
Documentation = "https://github.com/starlink-awaken/omo-debt"
Repository = "https://github.com/starlink-awaken/omo-debt"
Issues = "https://github.com/starlink-awaken/omo-debt/issues"
Changelog = "https://github.com/starlink-awaken/omo-debt/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
omo-debt = "omo_debt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/omo_debt --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]
