[project]
name = "omo"
version = "0.1.0"
description = "OMO — OS for AI Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4"]

[project.scripts]
omo = "omo.cli:main"
omo-debt = "omo.omo_debt:main"
omo-mcp = "omo.mcp_server:main"
cards = "omo.omo_cards:main"
omo-sse-daemon = "omo.omo_sse_daemon:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
