[project]
name = "omo"
version = "0.1.0"
description = "OMO — OS for AI Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "llm-gateway-kernel",
    "openai>=2.41.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4"]

[project.scripts]
omo = "omo.cli:main"
omo-debt = "omo.omo_debt:main"
omo-mcp = "omo.mcp_server:main"
cards = "omo.omo_cards:main"
omo-sse-daemon = "omo.omo_sse_daemon:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
llm-gateway-kernel = { path = "../kairon/packages/llm-gateway-kernel" }

[tool.pytest.ini_options]
# P44-W4: 注册 BOS URI 测试 markers, 让 CI 按需分组跑
#   pytest -m fast           → 只跑 registry load (1 测, <10ms)
#   pytest -m bos_5domain    → 跑 5 domain 覆盖 (1 测, ~3s)
#   pytest -m bos_40         → 跑 40 URI 全套 (3 测, ~3s)
markers = [
    "fast: 快速验证 (<10ms), 不依赖 agora/venv",
    "bos_40: 40 BOS URI smoke test 全套 (跨进程派发)",
    "bos_5domain: 5 Domain 覆盖验证 (POC_SERVICES 每个域至少 1 resolved)",
]
